2012-04-25  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/awt/AWTPermission/constructor.java:
	Made this test compatible with JDK7.

2012-04-24  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/awt/BasicStroke/createStrokeShapeLine2DDouble.java:
	* gnu/testlet/java/awt/BasicStroke/createStrokeShapeLine2DFloat.java:
	* gnu/testlet/java/awt/BasicStroke/createStrokeShapePolygon.java:
	* gnu/testlet/java/awt/BasicStroke/createStrokeShapeRectangle.java:
	* gnu/testlet/java/awt/BasicStroke/createStrokeShapeRectangle2DDouble.java:
	* gnu/testlet/java/awt/BasicStroke/createStrokeShapeRectangle2DFloat.java:
	* gnu/testlet/java/awt/BasicStroke/createStrokeShapeRoundRectangle2DDouble.java:
	* gnu/testlet/java/awt/BasicStroke/createStrokeShapeRoundRectangle2DFloat.java:
	Added new tests for BasicStroke class.

2012-04-13  Andrew John Hughes  <ahughes@redhat.com>

	* Harness.java:
	(ecjConstructor): Add wildcard.
	(commandLineTests): Convert to generified List.
	(excludeTests): Likewise.
	(klass): Add wildcard.
	(setupCompiler()): Use varargs rather than an array
	when calling getConstructor/getMethod.
	(runAllTests()): Remove redundant cast.
	(parseTags(String,LinkedHashSet,LinkedHashSet,LinkedHashSet)):
	Add types to sets.
	(processUsesTag(String,String,LinkedHashSet,LinkedHashSet,LinkedHashSet)):
	Likewise.
	(processFilesTag(String,String,LinkedHashSet)): Likewise.
	(copyFiles(LinkedHashSet)): Likewise.
	(processSingleTest(String)): Likewise.
	(processFolder(String)): Likewise.
	(runFolder(LinkedHashSet,boolean)): Likewise.
	(compileFiles(LinkedHashSet)): Likewise.
	* Makefile.am:
	(JAVACFLAGS): Expand to -source/-target and turn on warnings if javac is used.
	(harness): Actually use JAVACFLAGS.
	* RunnerProcess.java:
	(expectedXFails): Add generic type.  Use standard
	naming conventions.
	(runtest(String)): Add missing wildcard to Class.
	(setupEMMA(boolean)): Likewise.
	* gnu/testlet/TestReport.java:
	(testResults): Add generic type.